--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,3 +11,12 @@ E_NOT_ADULT=Not an adult error message
 E_NOT_UNIQUE=Not unique error message
 E_MESSAGE_NOT_READABLE=Message not readable error message
 E_PWDS_NOT_DIFF=Passwords not different error message
+
+
+feed.title=Feed
+feed.tweet.id=Tweet id
+feed.tweet.date=Tweet date
+
+tweet.create.title=Create
+tweet.create.content=Tweet content
+tweet.create.save=Save
