--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,3 +20,14 @@ feed.tweet.date=Tweet date
 tweet.create.title=Create
 tweet.create.content=Tweet content
 tweet.create.save=Save
+
+user.create.title=Ajout d'un utilisateur
+user.create.user=Save
+user.create.firstname=firstname
+user.create.lastname=lastname
+user.create.email=email
+user.create.birthDate=birth date
+user.create.region=region
+user.create.username=username
+user.create.password=password
+user.create.region.choose=choose a region
