add stats and change password

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,9 @@ E_NOT_ADULT=Not an adult error message
 E_NOT_UNIQUE=Not unique error message
 E_MESSAGE_NOT_READABLE=Message not readable error message
 E_PWDS_NOT_DIFF=Passwords not different error message
+E_NOT_USERNAME_EXIST=Username not exist
+E_NOT_USERNAME_PASSWORD=Isn't username password
+E_NOT_SAME_PASSWORD=Must not be the same password
 
 
 feed.title=Feed
